# grand-pattern-opencl

./: AGENT.md  CMakeLists.txt  Makefile  README.md
memory/: JOURNAL.md
src/host/: main.c  opencl_context.c  opencl_context.h  opencl_host.c  opencl_host.h  test_balance.c  test_batch_predict.c  test_correlation.c  test_cosine.c  test_decay.c  test_e2e.c  test_merge.c  test_vibe.c
src/kernels/: conservation.cl  fleet_ops.cl  graph_ops.cl  jepa_predict.cl  kernels.cl  murmur_gossip.cl  signal_route.cl  tick_process.cl  vibe_diffusion.cl
tests/: test_harness.c
